[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/nodes/tools/item_manager.gd" type="Script" id=1]
[ext_resource path="res://import/model/items/1h_sword.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/ui/file_selector.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/ui/input_text.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/ui/drop_down.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/ui/input_number.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("ModelVP")

[node name="ItemManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModelVP" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
size_override_stretch = true
msaa = 4
usage = 3
render_target_v_flip = true

[node name="Model" type="Spatial" parent="ModelVP"]
transform = Transform( 0.5, -0.5, 0.707107, 0.707107, 0.707107, 0, -0.5, 0.5, 0.707107, 0.2448, 0, 0 )

[node name="1h_sword" parent="ModelVP/Model" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="ModelVP"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.395361, 1.28386 )
projection = 1
size = 2.0

[node name="Box" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Box"]
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Menu" type="HBoxContainer" parent="Box/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0

[node name="LoadBtn" type="Button" parent="Box/PanelContainer/Menu"]
margin_right = 42.0
margin_bottom = 20.0
text = "Load"

[node name="SaveBtn" type="Button" parent="Box/PanelContainer/Menu"]
margin_left = 46.0
margin_right = 87.0
margin_bottom = 20.0
text = "Save"

[node name="Content" type="HBoxContainer" parent="Box"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="PanelContainer" parent="Box/Content"]
margin_right = 338.0
margin_bottom = 590.0
size_flags_horizontal = 3

[node name="VContainer" type="VBoxContainer" parent="Box/Content/Left"]
margin_left = 7.0
margin_top = 7.0
margin_right = 331.0
margin_bottom = 583.0

[node name="HContainer" type="HBoxContainer" parent="Box/Content/Left/VContainer"]
margin_right = 324.0
margin_bottom = 20.0

[node name="AddItemBtn" type="Button" parent="Box/Content/Left/VContainer/HContainer"]
margin_right = 324.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Add Item"

[node name="ItemsTree" type="Tree" parent="Box/Content/Left/VContainer"]
margin_top = 24.0
margin_right = 324.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="Mid" type="PanelContainer" parent="Box/Content"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Box/Content/Mid"]
margin_left = 7.0
margin_top = 7.0
margin_right = 332.0
margin_bottom = 583.0

[node name="TextureRect" type="TextureRect" parent="Box/Content/Mid/CenterContainer"]
margin_left = 12.0
margin_top = 138.0
margin_right = 312.0
margin_bottom = 438.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Box/Content/Mid/CenterContainer"]
margin_left = 162.0
margin_top = 288.0
margin_right = 162.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="PanelContainer" parent="Box/Content"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Box/Content/Right"]
margin_left = 7.0
margin_top = 7.0
margin_right = 332.0
margin_bottom = 583.0

[node name="Category" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer"]
margin_right = 325.0
margin_bottom = 14.0

[node name="Title" type="Label" parent="Box/Content/Right/VBoxContainer/Category"]
margin_right = 160.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Category:"
valign = 1

[node name="Value" type="Label" parent="Box/Content/Right/VBoxContainer/Category"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Materials"
align = 1
valign = 1

[node name="SubCategory" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 325.0
margin_bottom = 38.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/SubCategory" index="0"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
text = "Sub Category"

[node name="Value" parent="Box/Content/Right/VBoxContainer/SubCategory" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 20.0
items = [ "Test 1", null, false, 0, null ]

[node name="Name" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 325.0
margin_bottom = 66.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Name" index="0"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = "Name: "

[node name="Value" parent="Box/Content/Right/VBoxContainer/Name" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 24.0

[node name="Description" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 325.0
margin_bottom = 94.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Description" index="0"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = "Description: "

[node name="Value" parent="Box/Content/Right/VBoxContainer/Description" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 24.0

[node name="Model" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 98.0
margin_right = 325.0
margin_bottom = 122.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Model" index="0"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = "Model: "

[node name="Value" parent="Box/Content/Right/VBoxContainer/Model" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 24.0

[node name="Path" parent="Box/Content/Right/VBoxContainer/Model/Value" index="0"]
margin_right = 133.0
margin_bottom = 24.0

[node name="ChoosePath" parent="Box/Content/Right/VBoxContainer/Model/Value" index="1"]
margin_left = 137.0
margin_right = 161.0
margin_bottom = 24.0

[node name="FileDialog" parent="Box/Content/Right/VBoxContainer/Model" index="2"]
margin_left = 100.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 400.0
filters = PoolStringArray( "*.glb" )

[node name="MaxStack" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 126.0
margin_right = 325.0
margin_bottom = 150.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/MaxStack" index="0"]
margin_right = 160.0

[node name="Value" parent="Box/Content/Right/VBoxContainer/MaxStack" index="1"]
margin_left = 164.0
margin_right = 325.0

[node name="ReqProficiency" parent="Box/Content/Right/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 325.0
margin_bottom = 174.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/ReqProficiency" index="0"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
text = "Required Proficiency: "

[node name="Value" parent="Box/Content/Right/VBoxContainer/ReqProficiency" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 20.0
items = [ "Test 1", null, false, 0, null ]

[node name="Usable" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer"]
margin_top = 178.0
margin_right = 325.0
margin_bottom = 198.0

[node name="Action" parent="Box/Content/Right/VBoxContainer/Usable" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 325.0
margin_bottom = 20.0
hint_tooltip = "Triggered action when using the consumable"

[node name="Title" parent="Box/Content/Right/VBoxContainer/Usable/Action" index="0"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
text = "Action: "

[node name="Value" parent="Box/Content/Right/VBoxContainer/Usable/Action" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 20.0
items = [ "Test 1", null, false, 0, null ]

[node name="Equipment" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer"]
margin_top = 202.0
margin_right = 325.0
margin_bottom = 550.0

[node name="Slot" parent="Box/Content/Right/VBoxContainer/Equipment" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 325.0
margin_bottom = 20.0
hint_tooltip = "Triggered action when using the consumable"

[node name="Title" parent="Box/Content/Right/VBoxContainer/Equipment/Slot" index="0"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
text = "Slot:"

[node name="Value" parent="Box/Content/Right/VBoxContainer/Equipment/Slot" index="1"]
margin_left = 164.0
margin_right = 325.0
margin_bottom = 20.0
items = [ "Test 1", null, false, 0, null ]

[node name="Separator" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment"]
margin_top = 24.0
margin_right = 325.0
margin_bottom = 38.0

[node name="SkillList" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment"]
margin_top = 42.0
margin_right = 325.0
margin_bottom = 193.0

[node name="Label" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList"]
margin_right = 325.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Skill List"
align = 1

[node name="HSeparator" type="HSeparator" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList"]
margin_top = 18.0
margin_right = 325.0
margin_bottom = 22.0

[node name="SkillListBg" type="PanelContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList"]
margin_top = 26.0
margin_right = 325.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 111 )
follow_focus = true

[node name="SkillList" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll"]
margin_right = 299.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddSkillPanel" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList"]
margin_right = 299.0
margin_bottom = 24.0

[node name="SkillListOpts" type="OptionButton" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/AddSkillPanel"]
margin_right = 197.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/AddSkillPanel"]
margin_left = 201.0
margin_right = 299.0
margin_bottom = 24.0

[node name="Rate" type="SpinBox" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/AddSkillPanel/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
align = 1
suffix = "%"

[node name="AddSkill" type="Button" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/AddSkillPanel/HBoxContainer"]
margin_left = 78.0
margin_right = 98.0
margin_bottom = 24.0
text = "+"

[node name="HSeparator" type="HSeparator" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList"]
margin_top = 28.0
margin_right = 299.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList"]
margin_top = 36.0
margin_right = 299.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/HBoxContainer"]
margin_right = 267.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Skill Name"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/HBoxContainer"]
margin_left = 271.0
margin_right = 299.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Rate"
align = 1
valign = 1

[node name="Skills" type="PanelContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList"]
margin_top = 54.0
margin_right = 299.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Model" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/Skills"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 287.0
margin_bottom = 27.0

[node name="SkillName" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/Skills/Model"]
margin_right = 227.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "SOME SKILL NAME"
valign = 1

[node name="SkillRate" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/Skills/Model"]
margin_left = 231.0
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
text = "10%"
align = 1

[node name="Button" type="Button" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/Skills/Model"]
margin_left = 263.0
margin_right = 280.0
margin_bottom = 20.0
text = "-"

[node name="VBoxContainer" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/Skills"]
margin_left = 7.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 93.0

[node name="AttributeList" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment"]
margin_top = 197.0
margin_right = 325.0
margin_bottom = 348.0

[node name="Label" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList"]
margin_right = 325.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Attribute List"
align = 1

[node name="HSeparator" type="HSeparator" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList"]
margin_top = 18.0
margin_right = 325.0
margin_bottom = 22.0

[node name="AttrListBg" type="PanelContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList"]
margin_top = 26.0
margin_right = 325.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 111 )
follow_focus = true

[node name="AttrList" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll"]
margin_right = 299.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddAttrPanel" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList"]
margin_right = 299.0
margin_bottom = 24.0

[node name="AttrListOpts" type="OptionButton" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/AddAttrPanel"]
margin_right = 197.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/AddAttrPanel"]
margin_left = 201.0
margin_right = 299.0
margin_bottom = 24.0

[node name="Amount" type="SpinBox" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/AddAttrPanel/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
align = 1

[node name="AddAttr" type="Button" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/AddAttrPanel/HBoxContainer"]
margin_left = 78.0
margin_right = 98.0
margin_bottom = 24.0
text = "+"

[node name="HSeparator" type="HSeparator" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList"]
margin_top = 28.0
margin_right = 299.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList"]
margin_top = 36.0
margin_right = 299.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/HBoxContainer"]
margin_right = 260.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Attribute"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/HBoxContainer"]
margin_left = 264.0
margin_right = 299.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Value"
align = 1
valign = 1

[node name="Attrs" type="PanelContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList"]
margin_top = 54.0
margin_right = 299.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Model" type="HBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/Attrs"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 287.0
margin_bottom = 27.0

[node name="AttrName" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/Attrs/Model"]
margin_right = 239.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "SOME SKILL NAME"
valign = 1

[node name="AttrAmount" type="Label" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/Attrs/Model"]
margin_left = 243.0
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
text = "10"
align = 1

[node name="Button" type="Button" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/Attrs/Model"]
margin_left = 263.0
margin_right = 280.0
margin_bottom = 20.0
text = "-"

[node name="VBoxContainer" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/Attrs"]
margin_left = 7.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 93.0

[node name="HSeparator" type="HSeparator" parent="Box/Content/Right/VBoxContainer"]
margin_top = 554.0
margin_right = 325.0
margin_bottom = 558.0

[node name="SaveBtn" type="Label" parent="Box/Content/Right/VBoxContainer"]
margin_top = 562.0
margin_right = 325.0
margin_bottom = 576.0
text = "DON'T FORGET TO SAVE!"
align = 1
valign = 1

[node name="Templates" type="VBoxContainer" parent="Box/Content/Right/VBoxContainer"]
visible = false
margin_top = 244.0
margin_right = 320.0
margin_bottom = 320.0

[node name="InputNumber" parent="Box/Content/Right/VBoxContainer/Templates" instance=ExtResource( 6 )]

[node name="InputText" parent="Box/Content/Right/VBoxContainer/Templates" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 24.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Templates/InputText" index="0"]
margin_top = 5.0
margin_right = 158.0
margin_bottom = 19.0

[node name="Value" parent="Box/Content/Right/VBoxContainer/Templates/InputText" index="1"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 24.0

[node name="DropDown" parent="Box/Content/Right/VBoxContainer/Templates" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 320.0
margin_bottom = 48.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Templates/DropDown" index="0"]
margin_top = 3.0
margin_right = 158.0
margin_bottom = 17.0

[node name="Value" parent="Box/Content/Right/VBoxContainer/Templates/DropDown" index="1"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 20.0
items = [ "Test 1", null, false, 0, null ]

[node name="FileSelector" parent="Box/Content/Right/VBoxContainer/Templates" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 320.0
margin_bottom = 76.0

[node name="Title" parent="Box/Content/Right/VBoxContainer/Templates/FileSelector" index="0"]
margin_top = 5.0
margin_right = 158.0
margin_bottom = 19.0

[node name="Value" parent="Box/Content/Right/VBoxContainer/Templates/FileSelector" index="1"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 24.0

[node name="Path" parent="Box/Content/Right/VBoxContainer/Templates/FileSelector/Value" index="0"]
margin_right = 130.0
margin_bottom = 24.0

[node name="ChoosePath" parent="Box/Content/Right/VBoxContainer/Templates/FileSelector/Value" index="1"]
margin_left = 134.0
margin_right = 158.0
margin_bottom = 24.0

[node name="FileDialog" parent="Box/Content/Right/VBoxContainer/Templates/FileSelector" index="2"]
margin_left = 100.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 400.0

[node name="AutoSave" type="Timer" parent="Box/Content/Right"]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="Box/PanelContainer/Menu/LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="Box/PanelContainer/Menu/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="Box/Content/Left/VContainer/HContainer/AddItemBtn" to="." method="_on_AddItemBtn_pressed"]
[connection signal="item_selected" from="Box/Content/Left/VContainer/ItemsTree" to="." method="_on_ItemsTree_item_selected"]
[connection signal="pressed" from="Box/Content/Right/VBoxContainer/Equipment/SkillList/SkillListBg/Scroll/SkillList/AddSkillPanel/HBoxContainer/AddSkill" to="." method="_on_AddSkill_pressed"]
[connection signal="pressed" from="Box/Content/Right/VBoxContainer/Equipment/AttributeList/AttrListBg/Scroll/AttrList/AddAttrPanel/HBoxContainer/AddAttr" to="." method="_on_AddAttr_pressed"]
[connection signal="timeout" from="Box/Content/Right/AutoSave" to="." method="_on_AutoSave_timeout"]

[editable path="Box/Content/Right/VBoxContainer/SubCategory"]
[editable path="Box/Content/Right/VBoxContainer/Name"]
[editable path="Box/Content/Right/VBoxContainer/Description"]
[editable path="Box/Content/Right/VBoxContainer/Model"]
[editable path="Box/Content/Right/VBoxContainer/MaxStack"]
[editable path="Box/Content/Right/VBoxContainer/ReqProficiency"]
[editable path="Box/Content/Right/VBoxContainer/Usable/Action"]
[editable path="Box/Content/Right/VBoxContainer/Equipment/Slot"]
[editable path="Box/Content/Right/VBoxContainer/Templates/InputNumber"]
[editable path="Box/Content/Right/VBoxContainer/Templates/InputText"]
[editable path="Box/Content/Right/VBoxContainer/Templates/DropDown"]
[editable path="Box/Content/Right/VBoxContainer/Templates/FileSelector"]
